--- a/main.html
+++ b/main.html
@@ -12,5 +12,13 @@
 </script>
 
 </body>
-
+<div id="section">
+	<h1>Testimonials</h1>
+	
+	<div class="test">
+	<p id="para">This product is amaxing! I highly recommend it to anyone
+	is need of a solution like this.</p>
+		<p id="s">-john Doe</p>
+	</div>
+</div>
 </html>
